remove trim, use toList()